--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.8.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "framer-motion": "^10.16.4",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
